srcs/ftps_pod.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.universe.tf/allow-shared-ip: shared
  name: ftps
  labels:
    app: ftps
spec:
  ports:
  - port: 21
    protocol: TCP
    name: ftps
    targetPort: 21
  - port: 21000
    protocol: TCP
    name: ftp
    targetPort: 21000
  selector:
    app: ftps
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ftps
  labels:
    app: ftps
spec:
  selector:
    matchLabels:
      app: ftps
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ftps
    spec:
      containers:
      - name: ftps
        image: ftps
        imagePullPolicy: Never
        ports:
        - containerPort: 21
          hostPort: 21
        - containerPort: 21000
          hostPort: 21000 
        volumeMounts:
        - name: ftps-persistent-storage
          mountPath: /ftps
      volumes:
        - name: ftps-persistent-storage
          persistentVolumeClaim:
            claimName: ftps-pv-claim
