srcs/grafana_pod.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.universe.tf/allow-shared-ip: shared
  name: grafana
spec:
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  selector:
    app: grafana
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: grafana
  labels:
    app: grafana
spec:
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - name: grafana
          image: grafana
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
