srcs/influxdb_pod.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: influxdb
  labels:
    app: influxdb
spec:
  selector:
    matchLabels:
        app: influxdb
  template:
    metadata:
      name: influxdb-pod
      labels:
        app: influxdb
    spec:
      restartPolicy: Always
      containers:
        - name: influxdb
          image: influxdb
          imagePullPolicy: Never
          ports:
          - containerPort: 8086
          volumeMounts:
          - mountPath: "/var/lib/influxdb"
            name: influxdb-pv-storage
          - mountPath: "/var/run/docker.sock"
            name: socket-docker
      volumes:
      - name: influxdb-pv-storage
        persistentVolumeClaim:
          claimName: influxdb-pv-claim
      - name: socket-docker
        hostPath:
          path: /var/run/docker.sock
---
apiVersion: v1
kind: Service
metadata:
  name: influxdb
  labels:
    app: influxdb
spec:
  type: NodePort
  ports:
    - port: 8086
      nodePort: 8086
      name: influxdb
  selector:
    app: influxdb
  clusterIP: 10.99.99.95
