srcs/mysql_pod.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  clusterIP: 10.99.99.99
  selector:
    app: mysql
  ports:
      - port: 3306
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  selector:
    matchLabels:
      app: mysql
      tier: mysql
  template:
    metadata:
      labels:
        app: mysql
        tier: mysql
    spec:
      restartPolicy: Always
      containers:
      - name: mysql
        image: mysql
        imagePullPolicy: Never
        securityContext:
          privileged: true
        ports:
        - name: mysql
          containerPort: 3306
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: "/var/lib/mysql"
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
