srcs/nginx_pod.yml
kind: Service
apiVersion: v1
metadata:
  name: nginx
  annotations:
    metallb.universe.tf/allow-shared-ip: shared
  labels:
    app: nginx
spec:
  type: LoadBalancer
  selector:
    app: nginx
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
    - name: ssh
      port: 22
      targetPort: 22
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
          - containerPort: 80
            name: http
          - containerPort: 443
            name: https
          - containerPort: 22
            name: ssh
        imagePullPolicy: Never
        securityContext:
          privileged: true
