srcs/phpmyadmin_pod.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.universe.tf/allow-shared-ip: shared
  name: phpmyadmin
spec:
  ports:
    - name: http
      port: 5000
      targetPort: 5000
  selector:
    app: phpmyadmin
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpmyadmin
  labels:
    app: phpmyadmin
spec:
  selector:
    matchLabels:
      app: phpmyadmin
  template:
    metadata:
      labels:
        app: phpmyadmin
    spec:
      containers:
        - name: phpmyadmin
          image: phpmyadmin
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
