srcs/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
      - path: /phpmyadmin
        backend:
          serviceName: phpmyadmin
          servicePort: 5000
      - path: /wordpress
        backend:
          serviceName: wordpress
          servicePort: 5050
      - path: /grafana
        backend:
          serviceName: grafana
          servicePort: 3000
      - path: /ftps
        backend:
          serviceName: ftps
          servicePort: 21
